Correct to collapse to expand to match actual behavior. set active class to anchor instead of li. extract addEventListener listener to a function to improve performance.

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,8 +74,9 @@ section {
     display: inline-block;
 }
 
-.navbar__menu li.active{
+.navbar__menu li a.active{
     background: #333;
+    color: #fff;
 }
 
 .navbar__menu .menu__link {
